<resources>
    <string name="app_name">CIOKlub</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Please Login with your official username and password<font color='#FF0000'> * </font></string>
    <string name="terms">Terms and Conditions                                           ></string>
    <string name="otp">OTP Verification</string>
    <string name="title_activity_navigation_drawer">navigation_drawer_activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_about_us">About us                               ></string>
    <string name="menu_membership">Membership                            ></string>
    <string name="menu_member_payments">Member Payments</string>
    <string name="menu_notification">Notification</string>
    <string name="menu_terms_conditions"><![CDATA[Terms & Condition]]></string>
    <string name="menu_change_password">Change Password</string>
    <string name="menu_contact_us">Contact Us</string>
    <string name="official_email_id">Official Email Id <font color='#FF0000'> *</font></string>
    <string name="please_enter_4_digit_verification_code_sended_on_registered_mobile_number">Please Enter 4 digit verification code,sended on registered mobile number</string>
    <string name="resend_code">Resend Code ?</string>
    <string name="verify">Verify</string>


</resources>