<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single"
        >
        <item
            android:id="@+id/nav_about_us"
            android:icon="@drawable/ic_aboutus"
            android:title="@string/menu_about_us" />
        <item
            android:id="@+id/nav_membership"
            android:icon="@drawable/ic_membership"
            android:title="@string/menu_membership" />
        <item
            android:id="@+id/nav_member_payments"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_member_payments" />


        <item
            android:id="@+id/nav_notification"
            android:icon="@drawable/ic_notify"
            android:title="@string/menu_notification" />



        <item
            android:id="@+id/nav_terms_conditions"
            android:icon="@drawable/ic_terms"
            android:title="@string/menu_terms_conditions" />



        <item
            android:id="@+id/nav_change_password"
            android:icon="@drawable/ic_changepass"
            android:title="@string/menu_change_password" />


        <item
            android:id="@+id/nav_contact_us"
            android:icon="@drawable/ic_contact"
            android:title="@string/menu_contact_us" />




    </group>
</menu>