<?xml version="1.0" encoding="utf-8"?>
<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.OTPVerification">


    <TextView
        android:layout_width="336dp"
        android:layout_height="60dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="37dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="38dp"
        android:layout_marginBottom="619dp"
        android:gravity="center"
        android:text="@string/otp"
        android:textColor="@color/black"
        android:textSize="20sp"
        />


    <TextView

        android:layout_width="323dp"
        android:layout_height="60dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="40dp"
        android:layout_marginTop="136dp"
        android:layout_marginEnd="48dp"

        android:layout_marginBottom="535dp"
        android:gravity="center_horizontal"
        android:text="@string/please_enter_4_digit_verification_code_sended_on_registered_mobile_number"
        android:textColor="@color/black"
        android:textSize="15sp" />

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="match_parent"


        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="49dp"
        android:layout_marginTop="216dp"
        android:layout_marginEnd="301dp"
        android:layout_marginBottom="460dp"
        android:background="@drawable/change_button_shape"


        tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="50dp"
        android:layout_height="50dp"

        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="136dp"
        android:layout_marginTop="216dp"
        android:layout_marginEnd="219dp"
        android:layout_marginBottom="460dp"
        android:background="@drawable/change_button_shape"

        tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />


    <androidx.appcompat.widget.AppCompatButton


        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="218dp"
        android:layout_marginTop="216dp"
        android:layout_marginEnd="137dp"
        android:layout_marginBottom="460dp"
        android:background="@drawable/change_button_shape"


        tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="299dp"
        android:layout_marginTop="216dp"
        android:layout_marginEnd="57dp"
        android:layout_marginBottom="460dp"

        android:background="@drawable/change_button_shape"

        tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

    <TextView
        android:layout_width="117dp"
        android:layout_height="28dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="268dp"
        android:layout_marginTop="292dp"
        android:layout_marginEnd="26dp"
        android:layout_marginBottom="410dp"
        android:text="@string/resend_code"
        android:textColor="@color/submit_color"
        android:textStyle="bold"
        tools:ignore="TextContrastCheck" />

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="157dp"
        android:layout_height="37dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="123dp"
        android:layout_marginTop="398dp"
        android:layout_marginEnd="131dp"
        android:layout_marginBottom="296dp"
        android:background="@drawable/next_button_shape"
        android:backgroundTint="@color/submit_color"
        android:text="@string/verify"
        android:textColor="@color/black"
        tools:ignore="TouchTargetSizeCheck" />

</RelativeLayout>